--- a/src/static/src/scss/components/_product-hero.scss
+++ b/src/static/src/scss/components/_product-hero.scss
@@ -17,12 +17,20 @@
   }
 
   &__img-inner {
-    border-radius: 5px;
+    border-radius: .25vw;
     left: 50%;
     position: absolute;
     top: 3%;
     transform: translateX(-50%);
     width: 49%;
+
+    @include dmb-mq($from: desktop) {
+      border-radius: 5px;
+    }
+
+    @include dmb-mq($from: wide) {
+      max-width: 725px;
+    }
   }
 
   &__color-bg {
